<resources>
    <string name="app_name">AndroidTicketToRideApp</string>
    <string name="usernameSignIn">Username</string>
    <string name="passwordSignIn">Password</string>
    <string name="sign_inButton">Sign In</string>
    <string name="sign_upButton">Sign Up</string>
    <string name="add_tickets">Add Tickets</string>

    <string name="COLOR_TAG">COLORTAG</string>
    <string name="PILE_TAG">PILETAG</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>

    <string name="RouteLabel">%1$d Trains</string>

    <string name="points">%1$d Points</string>
    <string name="trainsLeft">%1$d Trains Left</string>
    <string name="ticketDialogMessage">Select at least two tickets</string>
    <string name="okay">OK</string>
    <string name="or">OR</string>
    <string name="loading">Loading Game...</string>
    <string name="play_ai_game">Play AI Game</string>
    <string name="welcome_to_ticket_to_ride">Welcome to Ticket To Ride</string>
    <string name="enter_game_name">Enter Game Name</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_you_are_signed_in">Welcome! You are signed in.</string>
    <string name="ticketToRideString">Ticket To Ride</string>


</resources>
