<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textAlignment="center"
        android:text="@string/welcome_you_are_signed_in"/>

    <EditText
        android:id="@+id/gameSessionText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:text="@string/enter_game_name" />

    <Button
        android:id="@+id/createGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/create_game" />

    <Button
        android:id="@+id/joinGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/join_game" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/sign_out"/>

    <Button
        android:id="@+id/gameTestButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="playAIClick"
        android:text="@string/play_ai_game"/>

</LinearLayout>
